# bezum-analysator

./: .beans.yml  .dockerignore  .gitignore  README.md  prd_v1.2.md  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt
.beans/: bezum-analysator-0wxn--replace-normal-approx-beta-ci-with-exact-quantiles.md  bezum-analysator-12xd--overview-show-last-3-years-stacked.md  bezum-analysator-1miw--implement-help-tab-with-telegram-export-guide.md  bezum-analysator-24i6--web-ui-year-selection-prevnext-navigation.md  bezum-analysator-4bej--implement-mobile-view-alongside-desktop-in-docs-st.md  bezum-analysator-4eab--scale-prognose-chart-to-50-percent-max.md  bezum-analysator-5t5j--ui-add-title-above-posterior-probability-rows.md  bezum-analysator-6fx9--histogram-ui-uv-setup-notebook.md  bezum-analysator-7kp6--adjust-prognose-chart-max-to-33-percent.md  bezum-analysator-7qb9--merge-featuretg-checkstats-into-main.md  bezum-analysator-7ue0--render-full-trambus-line-bar-plots-with-zeros.md  bezum-analysator-8kdf--fix-analyzer-to-read-telegram-message-field.md  bezum-analysator-8rmn--implement-responsive-mobile-view-in-real-dashboard.md  bezum-analysator-9jhp--integrate-stitch-ui-mockups-into-histogram-ui-prd.md  bezum-analysator-9jwt--add-top-trambus-lines-to-month-view.md  bezum-analysator-9qv6--try-tg-checkstats-against-freifahren-leipzig.md  bezum-analysator-e6zh--make-header-title-full-width-above-controls.md  bezum-analysator-eqc5--prd-monthly-histogram-drilldown-daily-averages.md  bezum-analysator-esg4--add-emojis-and-fun-tone-to-readme.md  (+25 more)
tests/: __init__.py  (+16 more)
(+38 files in other folders)
