[project]
name = "tg-checkstats"
version = "0.1.0"
description = "Telegram k-check seasonality analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
  "click>=8.1.7",
  "python-dotenv>=1.0.1",
  "ijson>=3.2.3",
  "python-dateutil>=2.9.0.post0",
  "tzdata>=2025.1",
  "jupyterlab>=4.5.3",
  "pandas>=2.3.3",
  "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pandas>=2.2.3",
  "ipykernel>=6.29.0",
  "matplotlib>=3.8.0",
]
bayes = [
  "scipy>=1.11.0",
]

[project.scripts]
tg-checkstats = "tg_checkstats.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
